--- a/views/review_page_root.ejs
+++ b/views/review_page_root.ejs
@@ -35,10 +35,7 @@
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
     ></script>
-    <script
-      type="text/javascript"
-      src = "../js/review.js"
-    ></script>
+    <script type="text/javascript" src="../js/review.js"></script>
   </head>
   <body>
     <div class="loader-wrapper">
@@ -129,7 +126,7 @@
         </div>
       </div>
     </header>
-  </br>
+    <br />
     <section class="notice">
       <div class="page-title">
         <div class="container">
@@ -157,17 +154,15 @@
         </div>
       </div>
     </section>
-  </br>
-  <div style="display : flex;justify-content : center;">
-    <nav aria-label="Page navigation example">
-      <ul class="pagination">
-          <div id="page_list" style="display: flex;">
-            <%-Page_List%>
-          </div>
-      </ul>
-    </nav>
-  </div>
-</br>
+    <br />
+    <div style="display: flex; justify-content: center">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <div id="page_list" style="display: flex"><%-Page_List%></div>
+        </ul>
+      </nav>
+    </div>
+    <br />
   </body>
   <!-- Footer-->
   <footer class="bg-light py-5">
