--- a/views/ask_page.ejs
+++ b/views/ask_page.ejs
@@ -143,11 +143,20 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            코딩나라는 총 7가지의 다양한 코딩 강의를 제공하고 있으며, 각 강의의
-            가격은 아래와 같습니다. 1. C언어 → 30,000(1회) 2. Python →
-            30.000(1회) 3. Mincraft Programming → 40.000(1회) 4. App Inventor →
-            40.000(1회) 5. Scatch, Entry → 30.000(1회) 6. 웹 페이지 만들기 →
-            30.000(1회)
+            <p>
+              코딩나라는 총 7가지의 다양한 코딩 강의를 제공하고 있으며, 각
+              강의의 가격은 아래와 같습니다.
+            </p>
+            <ol>
+              <li>&nbspC언어 → 33,000(1회)</li>
+              <li>&nbspPython → 30,000(1회)</li>
+              <li>&nbspMincraft Programming → 33,000(1회)</li>
+              <li>&nbspApp Inventor → 30,000(1회)</li>
+              <li>&nbspScatch → 27.000(1회)</li>
+              <li>&nbspEntry → 27.000(1회)</li>
+              <li>&nbsp웹 페이지 만들기 → 33,000(1회)</li>
+              <li>&nbspPython(심화) → 35.000(1회)</li>
+            </ol>
           </div>
         </div>
       </div>
@@ -171,8 +180,10 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            F&A에서 원하는 답변을 찾지 못하셨으면, 아래 보이시는 고객센터
-            연락처로 직접 연락을 주시거나 이메일로 문의 주시면 됩니다.
+            F&A에서 원하는 답변을 찾지 못하셨으면,
+            <span id="call_highlight" style="color: red"
+              >admin@coding-nara.com</span
+            >로 문의 주시면 됩니다.
           </div>
         </div>
       </div>
@@ -186,7 +197,7 @@
             aria-expanded="false"
             aria-controls="collapseThree"
           >
-            <strong>포인트는 사라지나요?</strong>
+            <strong>포인트는 사라지나요? </strong>
           </button>
         </h2>
         <div
@@ -196,7 +207,9 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            코딩나라 홈페이지에서 얻으신 포인트는 사라지지 않습니다.
+            <p>코딩나라 홈페이지에서 얻으신 포인트는 사라지지 않습니다.</p>
+            대신 포인트 사용 후, 강의를 1회라도 참여하면 후에 환불이 되지
+            않습니다.
           </div>
         </div>
       </div>
@@ -246,8 +259,10 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            아이가 어떤 강의를 들어야할 지 고민이라면, 고객센터 연락처(고객센터
-            연락처)로 연락주시면 자세한 상담 진행해 하도록 하겠습니다.
+            아이가 어떤 강의를 들어야할 지 고민이라면,
+            <span id="call_highlight" style="color: red"
+              >admin@coding-nara.com</span
+            >로 문의 주시면 자세한 상담 진행하도록 하겠습니다.
           </div>
         </div>
       </div>
@@ -297,8 +312,18 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            현재 진행되고 있는 이벤트는 아래와 같습니다. 1. 추천인 가입 이벤트로
-            포인트 30,000원을 지급 2. 강의 듣고, 리뷰 작성할 시 5,000원을 지급
+            <p>현재 진행되고 있는 이벤트는 아래와 같습니다.</p>
+            <ol>
+              <li>
+                &nbsp추천인 가입 이벤트로 포인트
+                <span id="call_highlight" style="color: red">30,000원</span>
+                지급
+              </li>
+              <li>
+                &nbsp강의 리뷰 작성시 포인트
+                <span id="call_highlight" style="color: red">5,000원</span> 지급
+              </li>
+            </ol>
           </div>
         </div>
       </div>
@@ -322,15 +347,15 @@
           data-bs-parent="#accordionExample"
         >
           <div class="accordion-body">
-            아래 조항을 살펴보시고 고객센터 연락처(고객센터 연락처)로 연락주시면
-            자세한 상담 진행해드리겠습니다. - 개인과외교습자는 학습자가 수강을
-            계속할 수 없는 경우 또는 학원의 등록말소, 교습소 폐지 등으로 교습을
-            계속할 수 없는 경우 학습자로부터 받은 교습비 등을 반환 사유
-            발생일부터 5일 이내에 반환해야 합니다(「학원의 설립·운영 및
-            과외교습에 관한 법률」 제18조제1항 및 「학원의 설립·운영 및
-            과외교습에 관한 법률 시행령」 제18조제3항). - 교습비 등 반환사유 및
-            반환기준(「학원의 설립·운영 및 과외교습에 관한 법률
-            시행령」제18조제2항·제3항 및 별표 4) (강의 환불 이미지 추가)
+            코딩나라에서
+            <span
+              >환불은
+              <a
+                href="https://easylaw.go.kr/CSP/CnpClsMain.laf?popMenu=ov&csmSeq=1140&ccfNo=4&cciNo=2&cnpClsNo=1"
+                >환불 규정</a
+              >
+              내용을 따릅니다.</span
+            >
           </div>
         </div>
       </div>
@@ -407,7 +432,7 @@
       <div class="container px-4 px-lg-5">
         <div class="small text-center text-muted">
           코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자
-          정보 확인
+          정보 확인 | 이메일: admin@coding-nara.com
         </div>
       </div>
       <div class="container px-4 px-lg-5">
