--- a/views/main_page.ejs
+++ b/views/main_page.ejs
@@ -310,14 +310,6 @@
     </section>
     <!-- Footer-->
     <footer class="bg-light py-5">
-      <a id="kakao-login-btn" href="">
-        <img
-          src="../image/kakaologin.png"
-          width="50"
-          height="50"
-          alt="카카오 로그인 버튼"
-        />
-      </a>
       <div class="container px-4 px-lg-5">
         <div class="small text-center text-muted">
           <a href="/policy/private">개인정보처리방침</a> |
@@ -327,7 +319,7 @@
       <div class="container px-4 px-lg-5">
         <div class="small text-center text-muted">
           코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자
-          정보 확인
+          정보 확인 | 이메일: admin@coding-nara.com
         </div>
       </div>
       <div class="container px-4 px-lg-5">
