--- a/views/auth_register_kakao.ejs
+++ b/views/auth_register_kakao.ejs
@@ -205,7 +205,7 @@
     <div class="container px-4 px-lg-5">
       <div class="small text-center text-muted">
         코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자 정보
-        확인
+        확인 | 이메일: admin@coding-nara.com
       </div>
     </div>
     <div class="container px-4 px-lg-5">
