--- a/views/curri_page.ejs
+++ b/views/curri_page.ejs
@@ -219,39 +219,16 @@
     </section>
     <!-- Footer-->
     <footer class="bg-light py-5">
-      <div align="center">
-        <div class="footer_bottom_right is-hidden-mobile">
-          <a href="https://post.naver.com/inflearn" target="_blank" aria-label="네이버 포스트 바로가기"><i class="text" aria-hidden="true">N</i></a>
-          <a href="https://blog.naver.com/inflearn" target="_blank" aria-label="네이버 블로그 바로가기"><i class="text" aria-hidden="true">B</i></a>
-          <a href="https://www.instagram.com/inflearn__official" target="_blank" aria-label="인스타그램 바로가기"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-          <a href="https://www.youtube.com/channel/UC0Y0T9JpgIBbyGDjvy9PbOg" target="_blank" aria-label="유튜브 바로가기"><i
-            class="fab fa-youtube" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/inflearn" target="_blank" aria-label="페이스북 바로가기"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/inflearn" target="_blank" aria-label="트위터 바로가기"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
-        </div>
-        <i class="bi bi-instagram fs-3"></i>
-        <i class="bi bi-envelope fs-3"></i>
-
-      <a id="kakao-login-btn" href="">
-        <img
-          src="../image/kakaologin.png"
-          width="30"
-          height="30"
-          alt="카카오 로그인 버튼"
-        />
-      </a>
-      <br>
-    </div>
       <div class="container px-4 px-lg-5">
         <div class="small text-center text-muted">
           <a href="/policy/private">개인정보처리방침</a> |
-          <a href="/policy/privacy">이용약관</a>
+          <a href="/policy/tos">이용약관</a>
         </div>
       </div>
       <div class="container px-4 px-lg-5">
         <div class="small text-center text-muted">
           코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자
-          정보 확인
+          정보 확인 | 이메일: admin@coding-nara.com
         </div>
       </div>
       <div class="container px-4 px-lg-5">
@@ -260,7 +237,6 @@
         </div>
       </div>
       <br />
-
       <div class="container px-4 px-lg-5">
         <div class="small text-center text-muted">
           Copyright &copy;코딩나라(Coding-nara)
