--- a/views/auth/auth_login_main.ejs
+++ b/views/auth/auth_login_main.ejs
@@ -243,10 +243,7 @@
           </div>
         </div>
         <div class="row gx-4 gx-lg-5 justify-content-center">
-          <div class="col-lg-4 text-center mb-5 mb-lg-0">
-            <i class="bi-phone fs-2 mb-3 text-muted"></i>
-            <div>+1 (555) 123-4567</div>
-          </div>
+          <div class="col-lg-4 text-center mb-5 mb-lg-0"></div>
         </div>
       </div>
     </section>
