--- a/views/auth/auth_register_main.ejs
+++ b/views/auth/auth_register_main.ejs
@@ -371,13 +371,12 @@
               </div>
               <!-- Submit Button-->
               <div class="d-grid">
-                <button
+                <input
                   class="btn btn-primary btn-xl"
                   id="submitButton"
                   type="submit"
-                >
-                  회원가입
-                </button>
+                  value="회원가입"
+                />
               </div>
             </form>
           </div>
