AWS용 코딩나라

--- a/CSS/styles_none.css
+++ b/CSS/styles_none.css
@@ -237,6 +237,10 @@ table th {
   width: 200px;
 }
 
+.board-table .th-date_instructor {
+  width: 130px;
+}
+
 .board-table th, .board-table td {
   padding: 14px 0;
 }
