--- a/views/ask_page.ejs
+++ b/views/ask_page.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login TEST - ${title}</title>
+    <title>F & Q</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <meta charset="utf-8" />
