--- a/views/auth/auth_login_naver.ejs
+++ b/views/auth/auth_login_naver.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login TEST - ${title}</title>
+    <title>네이버 로그인</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../../image/logo_mini.png" />
     <meta charset="utf-8" />
     <script
       type="text/javascript"
@@ -89,7 +90,7 @@
     <script type="text/javascript">
       var naver_id_login = new naver_id_login(
         "sIwGUXdmGRyOPin4mTnj",
-        "http://localhost:3000/auth/naverLogin"
+        "https://coding-nara.com/auth/naverLogin"
       );
       // 네이버 사용자 프로필 조회
       naver_id_login.get_naver_userprofile("naverSignInCallback()");
