--- a/views/auth/auth_register_main.ejs
+++ b/views/auth/auth_register_main.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login TEST - ${title}</title>
+    <title>코딩나라 - 회원가입</title>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../image/logo_mini.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
