--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,10 +2,11 @@
 <html>
   <head>
     
-    <title>Login TEST - ${title}</title>
+    <title>코딩나라 - 연락처</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
+    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
     <meta name="author" content="" />
     <meta charset="utf-8" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
