--- a/views/enroll_cart.ejs
+++ b/views/enroll_cart.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login TEST - ${title}</title>
+    <title>강좌 장바구니</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
