--- a/views/enroll_page_payment.ejs
+++ b/views/enroll_page_payment.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login TEST - ${title}</title>
+	  <title>코딩나라 - <%=Subject%></title>
     <meta charset="utf-8" />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -11,6 +11,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
@@ -279,7 +281,7 @@
               <dialog id="dialog" style="height: 550px; width: 20%">
                 <div align="center">
                   <img
-                    src="http://localhost:54213/<%=Image%>"
+                    src="https://coding-nara.com/<%=Image%>"
                     width="180"
                     height="250"
                   />
