--- a/views/main_page.ejs
+++ b/views/main_page.ejs
@@ -8,7 +8,8 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Login TEST - ${title}</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
+    <title>코딩나라 - 메인</title>
     <meta charset="utf-8" />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
