--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
