--- a/views/my_page_instructor_update_create.ejs
+++ b/views/my_page_instructor_update_create.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title></title>
+  <title>마이페이지</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Favicon-->
