--- a/views/my_page_instructor_update_enter.ejs
+++ b/views/my_page_instructor_update_enter.ejs
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-  <title>Login TEST - ${title}</title>
+  <title>마이페이지</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Bootstrap Icons-->
+  <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
