--- a/views/review_page_enter.ejs
+++ b/views/review_page_enter.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login TEST - <%=Title%></title>
+    <title>수강 후기<%=Title%></title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap Icons-->
