장바구니 기능 구현 및 디비 오류 수정

--- a/views/enroll_page_payment.ejs
+++ b/views/enroll_page_payment.ejs
@@ -11,8 +11,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="../image/logo_mini.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../../../image/logo_mini.png" />
     <!-- Google fonts-->
     <link
       href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
@@ -397,7 +396,7 @@
               <a
                 class="btn btn-dark"
                 id="result_button_enroll"
-                onclick="javascript:basket.payment(<%=Course_Active%>,<%=Student_ID%>, <%=Course_ID%>, <%=Date_ID%>, <%=Time_ID%>,<%=Teacher_ID%>,<%=Price%>)"
+		onclick="javascript:basket.payment(<%=Course_Active%>,<%=Student_ID%>, <%=Course_ID%>, <%=Date_ID%>, <%=Time_ID%>,<%=Teacher_ID%>,<%=Price%>)"
                 >수강 신청</a
               >
             </div>
