--- a/views/my_page_instructor.ejs
+++ b/views/my_page_instructor.ejs
@@ -255,17 +255,16 @@
           <table class="board-table">
             <thead>
               <tr>
-                <th scope="col" class="th-title">강좌수</th>
-                <th scope="col" class="th-title">강좌명</th>
-                <th scope="col" class="th-date">강의 요일</th>
-                <th scope="col" class="th-date">강의 시간</th>
-                <th scope="col" class="th-date">학생</th>
-                <th scope="col" class="th-date">강의 완료 횟수</th>
-                <th scope="col" class="th-date">강의 남은 횟수</th>
-                <th scope="col" class="th-date">강의 총 횟수</th>
-                <th scope="col" class="th-date">강의 완료</th>
-                <th scope="col" class="th-date">강의</th>
-                <th scope="col" class="th-date">강의 코드</th>
+		<th scope="col" class="th-date_instructor">강좌명</th>
+                <th scope="col" class="th-date_instructor">강의 요일</th>
+                <th scope="col" class="th-date_instructor">강의 시간</th>
+                <th scope="col" class="th-date_instructor">학생</th>
+                <th scope="col" class="th-date_instructor">강의 완료 횟수</th>
+                <th scope="col" class="th-date_instructor">강의 남은 횟수</th>
+                <th scope="col" class="th-date_instructor">강의 총 횟수</th>
+                <th scope="col" class="th-date_instructor">강의 완료</th>
+                <th scope="col" class="th-date_instructor">강의</th>
+                <th scope="col" class="th-date_instructor">강의 코드</th>
               </tr>
             </thead>
 
