장바구니 기능 구현 및AWS에 올라갈 코드 수정

--- a/CSS/styles_none.css
+++ b/CSS/styles_none.css
@@ -236,7 +236,9 @@ table th {
 .board-table .th-date {
   width: 200px;
 }
-
+.board-table .th-date_instructor {
+  width: 130px;
+}
 .board-table th, .board-table td {
   padding: 14px 0;
 }
