--- a/views/enroll_page_payment.ejs
+++ b/views/enroll_page_payment.ejs
@@ -395,7 +395,7 @@
               <a
                 class="btn btn-dark"
                 id="result_button_enroll"
-                onclick="javascript:basket.payment(<%=Course_Active%>,<%=Student_ID%>, <%=Course_ID%>, <%=Date_ID%>, <%=Time_ID%>,<%=Teacher_ID%>,<%=Price%>)"
+                onclick="javascript:basket.payment(<%=Course_Active%>,<%=Student_ID%>, <%=Course_ID%>, <%=Date_ID%>, <%=Time_ID%>,<%=Teacher_ID%>, <%=Price%>);"
                 >수강 신청</a
               >
             </div>
